--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 dot.vim/tmp/*
-dot.ion3/default-session--*
-dot.ion3/save_statusbar.lua
+
+# Ion3 files
+ion3/default-session--*
+ion3/save_statusbar.lua
+
 vimperator/.vimperator/info/
 # Zsh zcompil files
 *.zwc
