tmux: Increase history-limit.

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,7 @@ unbind C-b
 set -g prefix C-o
 
 set -g default-terminal "screen"
+set -g history-limit 20000
 
 set-window-option -g monitor-activity on
 set-window-option -g mode-keys vi
